--- a/app/src/main/res/layout/activity_campus_menu.xml
+++ b/app/src/main/res/layout/activity_campus_menu.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SpashActivity">
+    tools:context=".CampusMenuActivity">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView_campus_menu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
