--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,6 +23,12 @@
             android:layout_height="wrap_content"
             android:text="Acerca"/>
 
+        <Button
+            android:id="@+id/btn_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Test"/>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
