update: clase haversine, vista calcular camino por gps, error al no tener gps

--- a/app/src/main/res/layout/layout_calcular_ruta.xml
+++ b/app/src/main/res/layout/layout_calcular_ruta.xml
@@ -21,6 +21,12 @@
             android:layout_height="wrap_content"
             android:text="Calcular"/>
 
+        <Button
+            android:id="@+id/btn_calcular_ruta_gps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="GPS"/>
+
     </LinearLayout>
 
 </ScrollView>
