--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,6 +18,12 @@
             android:text="Campus"/>
 
         <Button
+            android:id="@+id/btn_personas_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Personas"/>
+
+        <Button
             android:id="@+id/btn_acerca"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
