--- a/app/src/main/res/layout/item_campus_menu.xml
+++ b/app/src/main/res/layout/item_campus_menu.xml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    card_view:cardCornerRadius="5dp"
-    android:layout_margin="5dp">
+    android:layout_height="wrap_content">
 
-    <LinearLayout
+    <TextView
+        android:paddingTop="10dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:textSize="20sp"
+        android:textColor="#111"
+        android:id="@+id/nombre_campus"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/nombre_campus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    <TextView
+        android:paddingTop="5dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:id="@+id/direccion_campus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/direccion_campus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    <View
+        android:background="#bfbfbf"
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"/>
 
-    </LinearLayout>
+</LinearLayout>
 
-</android.support.v7.widget.CardView>
