--- a/app/src/main/res/layout/layout_acerca.xml
+++ b/app/src/main/res/layout/layout_acerca.xml
@@ -16,9 +16,11 @@
             android:text="@string/acerca_txt" />
 
         <Button
+            android:layout_marginTop="10dp"
             android:id="@+id/btn_acerca_aceptar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAllCaps="false"
             android:text="Aceptar"/>
 
     </LinearLayout>
