--- a/app/src/main/res/layout/layout_seleccionar_busqueda.xml
+++ b/app/src/main/res/layout/layout_seleccionar_busqueda.xml
@@ -10,17 +10,37 @@
         android:padding="20dp"
         android:gravity="center">
 
-        <Button
-            android:id="@+id/btn_busqueda_campus"
+        <TextView
+            android:id="@+id/txt_busqueda"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Campus"/>
+            android:text="Selecciona tu opcion de busqueda"
+            android:textSize="16dp"
+            android:textColor="#111111"/>
 
-        <Button
-            android:id="@+id/btn_busqueda_personas"
-            android:layout_width="wrap_content"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Personas"/>
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/btn_busqueda_campus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Unidades"
+                android:textAllCaps="false"
+                android:layout_margin="5dp"/>
+
+            <Button
+                android:id="@+id/btn_busqueda_personas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Personas"
+                android:textAllCaps="false"
+                android:layout_margin="5dp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
