--- a/app/src/main/res/layout/activity_ruta_gps.xml
+++ b/app/src/main/res/layout/activity_ruta_gps.xml
@@ -10,4 +10,9 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
+    <Button android:id="@+id/btn_get_ruta"
+        android:layout_width="fill_parent"
+        android:text="Calcular Ruta"
+        android:layout_height="wrap_content"></Button>
+
 </android.support.constraint.ConstraintLayout>
