update acentos y titulos de dialogs

--- a/app/src/main/res/layout/activity_ruta_gps.xml
+++ b/app/src/main/res/layout/activity_ruta_gps.xml
@@ -13,6 +13,8 @@
     <Button android:id="@+id/btn_get_ruta"
         android:layout_width="fill_parent"
         android:text="Calcular Ruta"
+        android:textSize="18dp"
+        android:textAllCaps="false"
         android:layout_height="wrap_content"></Button>
 
 </android.support.constraint.ConstraintLayout>
